--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,14 @@ dist.jar=${dist.dir}/vuelo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar.jar=../../../../Desktop/programadores3.0/jcalendar.jar
+file.reference.JTimeChooser_0.1.0.jar=../../../../Desktop/JTimeChooser_0.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jcalendar.jar}:\
+    ${file.reference.JTimeChooser_0.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=vuelo.Control.Vuelo
+main.class=vuelo.Vista.F_Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
