--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.JTimeChooser_0.1.0.jar=C:\\Users\\Sebastian\\Desktop\\programadores3.0\\JTimeChooser_0.1.0.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Sebastian\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
